Contrast Footer Fix

--- a/style.css
+++ b/style.css
@@ -1,24 +1,28 @@
 a {
   text-decoration: none;
-  color: #868e96;
+  color: #a0a3a6;
   }
 
   a:link {
     text-decoration: none;
     }
     
-    a:visited {
-    text-decoration: none;
-    }
-    
-    a:hover {
-    text-decoration: none;
-    color: #f8f9fa;
-    }
-    
-    a:active {
-    text-decoration: none;
-    }
+  a:visited {
+  text-decoration: none;
+  }
+  
+  a:hover {
+  text-decoration: none;
+  color: #f8f9fa;
+  }
+  
+  a:active {
+  text-decoration: none;
+  }
+
+  p{
+    color: #a0a3a6;
+  }
 
 body, html {
   height: 100%;
